--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@ layout: default
 title: Your New Jekyll Site
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+
+<h1>HIVE</h1>
+<h2>MIND</h2>
+
+<div class='container'>
+<p>builds products and helps companies build theirs.</p>
+
 </div>
+  
+<a class='hire' href='hello@dvncan.com'>Hire Us</a>
